--- a/LM/T2/librerias/index.html
+++ b/LM/T2/librerias/index.html
@@ -108,6 +108,15 @@
             <p>Parrafo del articulo 3 con la descripcion</p>
             <button class="btn btn-success">Ver detalle</button>
           </article>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/fXuxYuvWupU?si=Y86eZ4eSs-qg31mA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </main>
