--- a/DWEC/Presencial/index.html
+++ b/DWEC/Presencial/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <main class="container m-4">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col">
           <h1>Filtrado</h1>
           <div class="m-4">
@@ -44,7 +44,10 @@
               placeholder="numero de resultados"
             />
 
-            <button class="btn btn-primary">Buscar</button>
+            <button class="btn btn-primary" id="buscar">Buscar</button>
+            <button class="btn btn-primary" id="agregar">Agregar</button>
+            <button class="btn btn-primary" id="modificar">Modificar</button>
+            <button class="btn btn-primary" id="borrar">Borrar</button>
           </div>
         </div>
 
