--- a/LM/T4/index.html
+++ b/LM/T4/index.html
@@ -3,19 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>Web dinámica</h1>
+    <main class="container m-4">
+      <h1>Web dinámica</h1>
+      <p id="parrafo-uno" class="parrafos">
+        Esta es la primera app web realizada con JS
+      </p>
+      <p id="parrafo-dos">Este es el segundo parrafo de la app web</p>
+      <p id="parrafo-tres" class="parrafos">
+        Este es el segundo parrafo de la app web
+      </p>
+      <input
+        id="input-op1"
+        type="number"
+        placeholder="introduce operando 1"
+        class="form-control"
+      />
+      <input
+        id="input-op2"
+        type="number"
+        placeholder="introduce operando 2"
+        class="form-control"
+      />
+      <select class="form-select" id="select-operacion">
+        <option value="1">Suma</option>
+        <option value="2">Resta</option>
+        <option value="3">Multiplicacion</option>
+        <option value="4">Division</option>
+      </select>
+
+      <button id="boton-operar" class="btn btn-primary m-3">Operar</button>
+
+      <div>
+        <input
+          maxlength="100"
+          id="input-texto"
+          class="form-control"
+          type="text"
+          placeholder="Escribe lo que quieras"
+        />
+        <span>0</span><span>/100</span>
+      </div>
+    </main>
 
     <!--  <script>
       // codigo js
       console.log(
         "Código ejecutado desde el fichero html con js embebido dentro"
-      );
-
-      console.log("Segunda línea del fichero html con codigo js");
-    </script> -->
+        );
+        
+        console.log("Segunda línea del fichero html con codigo js");
+      </script> -->
     <script src="./utils/js/hola_mundo.js"></script>
   </body>
 </html>
