--- a/DWEC/curso2425/T4/promesas/index.html
+++ b/DWEC/curso2425/T4/promesas/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
+    <button id="botonGuardar">Guardar dato</button>
+    <a href="./index2.html">Pasar pagina</a>
+    <script src="./js/index_async.js"></script>
   </body>
 </html>
